// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RoomListItemView /> should be selected if isSelected=true 1`] = `
<DocumentFragment>
  <button
    aria-label="Open room room1"
    aria-selected="true"
    class="mx_RoomListItemView mx_RoomListItemView_empty mx_RoomListItemView_selected"
    type="button"
  >
    <div
      class="mx_Flex mx_RoomListItemView_container"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="mx_DecoratedRoomAvatar"
      >
        <span
          aria-label="Avatar"
          class="_avatar_1qbcf_8 mx_BaseAvatar"
          data-color="3"
          data-testid="avatar-img"
          data-type="round"
          style="--cpd-avatar-size: 32px;"
        >
          <img
            alt=""
            class="_image_1qbcf_41"
            data-type="round"
            height="32px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="http://this.is.a.url/avatar.url/room.png"
            width="32px"
          />
        </span>
      </div>
      <div
        class="mx_Flex mx_RoomListItemView_content"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: space-between; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
      >
        <span
          class="mx_RoomListItemView_roomName"
          title="room1"
        >
          room1
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<RoomListItemView /> should render a room item 1`] = `
<DocumentFragment>
  <button
    aria-label="Open room room1"
    aria-selected="false"
    class="mx_RoomListItemView mx_RoomListItemView_empty"
    type="button"
  >
    <div
      class="mx_Flex mx_RoomListItemView_container"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="mx_DecoratedRoomAvatar"
      >
        <span
          aria-label="Avatar"
          class="_avatar_1qbcf_8 mx_BaseAvatar"
          data-color="3"
          data-testid="avatar-img"
          data-type="round"
          style="--cpd-avatar-size: 32px;"
        >
          <img
            alt=""
            class="_image_1qbcf_41"
            data-type="round"
            height="32px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="http://this.is.a.url/avatar.url/room.png"
            width="32px"
          />
        </span>
      </div>
      <div
        class="mx_Flex mx_RoomListItemView_content"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: space-between; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
      >
        <span
          class="mx_RoomListItemView_roomName"
          title="room1"
        >
          room1
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;
